--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>try my best learn</title>
 </head>
 <body>
-    
+    <h1>i can push to github</h1>
+    <h2>mama i can code now</h2>
+    <h3>lol vi what are you doing now</h3>
 </body>
 </html>
