--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <h4>ok babu now you can go to dhaka</h4>
     <p>more paragraph</p>
     <p> i am coding coding </p>
+    <p>syntx issue will be</p>
+    <p>holo lok dekhano</p>
     
 
 </body>
